# AngelScript-Clib

./: README.md
clib/: angelscript_c.h  as_c.cpp
clib/projects/cmake/: CMakeLists.txt
clib/projects/gnuc/: makefile
clib/projects/msvc2022/: angelscript_c.vcxproj
clib/test_clib/projects/cmake/: CMakeLists.txt
clib/test_clib/projects/msvc2022/: test.sln  test.vcxproj
